force-app/main/default/objects/CommercialPlanDetail__c/fields/AgreementLine2__c.field-meta.xml
<CustomField>
    <fullName>AgreementLine2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ligne de budget promotionnel négocié au niveau de l&apos;accord</description>
    <label>Agreement Line 2</label>
    <referenceTo>AgreementLine__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Agreement Line 2)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsAGL2</relationshipName>
    <type>Lookup</type>
</CustomField>