force-app/main/default/objects/CommercialPlanDetail__c/fields/AgreementNumberAG__c.field-meta.xml
<CustomField>
    <fullName>AgreementNumberAG__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>