force-app/main/default/objects/CommercialPlanDetail__c/fields/ApprobationDate__c.field-meta.xml
<CustomField>
    <fullName>ApprobationDate__c</fullName>
    <description>Date début vente conso pour la ligne</description>
    <label>Approbation date</label>
    <type>Date</type>
</CustomField>