force-app/main/default/objects/CommercialPlanDetail__c/fields/BusinessUnitTarget__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CP BU target and their childs</description>
    <label>Business Unit Target</label>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (BU Target)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsBUTarget</relationshipName>
    <type>Lookup</type>
</CustomField>