force-app/main/default/objects/CommercialPlanDetail__c/fields/CodeCP__c.field-meta.xml
<CustomField>
    <fullName>CodeCP__c</fullName>
    <formula>CommercialPlan__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Code</label>
    <type>Text</type>
</CustomField>