force-app/main/default/objects/CommercialPlanDetail__c/fields/CodeLongNS__c.field-meta.xml
<CustomField>
    <fullName>CodeLongNS__c</fullName>
    <formula>NegoScope__r.NS_Code_Long__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nego Scope Code</label>
    <type>Text</type>
</CustomField>