force-app/main/default/objects/CommercialPlanDetail__c/fields/CommercialPlan__c.field-meta.xml
<CustomField>
    <fullName>CommercialPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Plan</label>
    <referenceTo>CommercialPlan__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Commercial Plan)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsCP</relationshipName>
    <type>Lookup</type>
</CustomField>