force-app/main/default/objects/CommercialPlanDetail__c/fields/CommercialPlanParent__c.field-meta.xml
<CustomField>
    <fullName>CommercialPlanParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Plan Parent</label>
    <referenceTo>CommercialPlan__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Commercial Plan Parent)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsCPParent</relationshipName>
    <type>Lookup</type>
</CustomField>