force-app/main/default/objects/CommercialPlanDetail__c/fields/ConsumerTradeItemPromoDetail__c.field-meta.xml
<CustomField>
    <fullName>ConsumerTradeItemPromoDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Trade Item Promo Detail</label>
    <referenceTo>CommercialPlanDetail__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (CTI Promo Detail)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsCTIPD</relationshipName>
    <type>Lookup</type>
</CustomField>