force-app/main/default/objects/CommercialPlanDetail__c/fields/ContactEmailPartner__c.field-meta.xml
<CustomField>
    <fullName>ContactEmailPartner__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>