force-app/main/default/objects/CommercialPlanDetail__c/fields/ContactPartner__c.field-meta.xml
<CustomField>
    <fullName>ContactPartner__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>