force-app/main/default/objects/CommercialPlanDetail__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Contract)</relationshipLabel>
    <relationshipName>CommercialPlanDetails</relationshipName>
    <type>Lookup</type>
</CustomField>