force-app/main/default/objects/CommercialPlanDetail__c/fields/Contract_Discount1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Discount1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Discount 1</label>
    <referenceTo>Contract_Discount__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Contract Discount)</relationshipLabel>
    <relationshipName>CommercialPlanDetails1</relationshipName>
    <type>Lookup</type>
</CustomField>