force-app/main/default/objects/CommercialPlanDetail__c/fields/ContractPromoBDate__c.field-meta.xml
<CustomField>
    <fullName>ContractPromoBDate__c</fullName>
    <formula>If ( ISBLANK(SellOutBDate__c), SellOutBDateCP__c , SellOutBDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date for Agreement</label>
    <type>Date</type>
</CustomField>