force-app/main/default/objects/CommercialPlanDetail__c/fields/ContractPromoEDate__c.field-meta.xml
<CustomField>
    <fullName>ContractPromoEDate__c</fullName>
    <formula>If ( ISBLANK(SellOutEDate__c), SellOutEDateCP__c, SellOutEDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date for Agreement</label>
    <type>Date</type>
</CustomField>