force-app/main/default/objects/CommercialPlanDetail__c/fields/ContractPromoEditionDate__c.field-meta.xml
<CustomField>
    <fullName>ContractPromoEditionDate__c</fullName>
    <description>Date début vente conso pour la ligne</description>
    <label>Edition Date</label>
    <type>Date</type>
</CustomField>