force-app/main/default/objects/CommercialPlanDetail__c/fields/ContractPromoNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractPromoNumber__c</fullName>
    <label>Event Detail Contract Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>