force-app/main/default/objects/CommercialPlanDetail__c/fields/ContractPromoStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractPromoStatus__c</fullName>
    <label>Contract Promo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>