force-app/main/default/objects/CommercialPlanDetail__c/fields/ContractPromoURL__c.field-meta.xml
<CustomField>
    <fullName>ContractPromoURL__c</fullName>
    <label>Promo Contract</label>
    <type>Url</type>
</CustomField>