force-app/main/default/objects/CommercialPlanDetail__c/fields/ContractPromoYear__c.field-meta.xml
<CustomField>
    <fullName>ContractPromoYear__c</fullName>
    <description>Année de l&apos;accord de référence</description>
    <formula>YEAR( ContractPromoBDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>