force-app/main/default/objects/CommercialPlanDetail__c/fields/ExtractLDate__c.field-meta.xml
<CustomField>
    <fullName>ExtractLDate__c</fullName>
    <label>Last Extraction date</label>
    <type>DateTime</type>
</CustomField>