force-app/main/default/objects/CommercialPlanDetail__c/fields/ExtractStatus__c.field-meta.xml
<CustomField>
    <fullName>ExtractStatus__c</fullName>
    <label>Extract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extract</fullName>
            </value>
            <value>
                <fullName>Extracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>