force-app/main/default/objects/CommercialPlanDetail__c/fields/HierarchyElement__c.field-meta.xml
<CustomField>
    <fullName>HierarchyElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Element</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (HE)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsHE</relationshipName>
    <type>Lookup</type>
</CustomField>