force-app/main/default/objects/CommercialPlanDetail__c/fields/IntegIdLast__c.field-meta.xml
<CustomField>
    <fullName>IntegIdLast__c</fullName>
    <label>Last Integration id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>