force-app/main/default/objects/CommercialPlanDetail__c/fields/IntegLDate__c.field-meta.xml
<CustomField>
    <fullName>IntegLDate__c</fullName>
    <label>Last Integration Date</label>
    <type>DateTime</type>
</CustomField>