force-app/main/default/objects/CommercialPlanDetail__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <description>Date de la facture</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>