force-app/main/default/objects/CommercialPlanDetail__c/fields/InvoiceDocumentURL__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDocumentURL__c</fullName>
    <label>Customer invoice document</label>
    <type>Url</type>
</CustomField>