force-app/main/default/objects/CommercialPlanDetail__c/fields/IsFromAgreementLinePrenego__c.field-meta.xml
<CustomField>
    <fullName>IsFromAgreementLinePrenego__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From pre-nego budget</label>
    <type>Checkbox</type>
</CustomField>