force-app/main/default/objects/CommercialPlanDetail__c/fields/IsIncludetoNetPriceStmt__c.field-meta.xml
<CustomField>
    <fullName>IsIncludetoNetPriceStmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Included in NetPrice Statement</label>
    <type>Checkbox</type>
</CustomField>