force-app/main/default/objects/CommercialPlanDetail__c/fields/IsMasterHLP__c.field-meta.xml
<CustomField>
    <fullName>IsMasterHLP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMaster Higher Level Packaging</label>
    <type>Checkbox</type>
</CustomField>