force-app/main/default/objects/CommercialPlanDetail__c/fields/ManagementFix__c.field-meta.xml
<CustomField>
    <fullName>ManagementFix__c</fullName>
    <description>Frais de gestion fix</description>
    <label>Management Fix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>