force-app/main/default/objects/CommercialPlanDetail__c/fields/NameCP__c.field-meta.xml
<CustomField>
    <fullName>NameCP__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>