force-app/main/default/objects/CommercialPlanDetail__c/fields/NegoScope__c.field-meta.xml
<CustomField>
    <fullName>NegoScope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NS de référence (trigger en fonction du produit lié) ou saisie manuelle si UB spécifique à la promo</description>
    <label>Nego Scope</label>
    <referenceTo>NegoScope__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Nego Scope)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsNegoScope</relationshipName>
    <type>Lookup</type>
</CustomField>