force-app/main/default/objects/CommercialPlanDetail__c/fields/NetPricePromo__c.field-meta.xml
<CustomField>
    <fullName>NetPricePromo__c</fullName>
    <description>PAN HT recalculé après application de la remise promo. Il est recalculé live depuis la page de saisie de promotion en appliquant les remises de rang inférieur ou égal au rang de la remise promo. Par défaut il est égale au NetPriceRegular__c tant que aucune remise promo (ou tarif spécific promo) est appliquée.</description>
    <label>Promo Purchase NetPrice</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>