force-app/main/default/objects/CommercialPlanDetail__c/fields/NetPriceWoTaxPromo__c.field-meta.xml
<CustomField>
    <fullName>NetPriceWoTaxPromo__c</fullName>
    <label>Promo Net Price without tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>