force-app/main/default/objects/CommercialPlanDetail__c/fields/OpName__c.field-meta.xml
<CustomField>
    <fullName>OpName__c</fullName>
    <label>Event</label>
    <length>250</length>
    <type>Text</type>
</CustomField>