force-app/main/default/objects/CommercialPlanDetail__c/fields/OpType__c.field-meta.xml
<CustomField>
    <fullName>OpType__c</fullName>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tract</fullName>
            </value>
            <value>
                <fullName>Hors tract</fullName>
            </value>
            <value>
                <fullName>Carte €</fullName>
            </value>
            <value>
                <fullName>Carte %</fullName>
            </value>
            <value>
                <fullName>Stop rayon</fullName>
            </value>
            <value>
                <fullName>Regional Tract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>