force-app/main/default/objects/CommercialPlanDetail__c/fields/OwnerNS__c.field-meta.xml
<CustomField>
    <fullName>OwnerNS__c</fullName>
    <formula>NegoScope__r.Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>