force-app/main/default/objects/CommercialPlanDetail__c/fields/PowerofAttornayNumber__c.field-meta.xml
<CustomField>
    <fullName>PowerofAttornayNumber__c</fullName>
    <label>Customer reference number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>