force-app/main/default/objects/CommercialPlanDetail__c/fields/PowerofAttornayStatus__c.field-meta.xml
<CustomField>
    <fullName>PowerofAttornayStatus__c</fullName>
    <description>Statut du contrat de mandat</description>
    <label>Power of Attornay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>