force-app/main/default/objects/CommercialPlanDetail__c/fields/PowerofAttornayURL__c.field-meta.xml
<CustomField>
    <fullName>PowerofAttornayURL__c</fullName>
    <label>Power of Attornay</label>
    <type>Url</type>
</CustomField>