force-app/main/default/objects/CommercialPlanDetail__c/fields/PowerofAttorneyEditionDate__c.field-meta.xml
<CustomField>
    <fullName>PowerofAttorneyEditionDate__c</fullName>
    <description>Date d&apos;édition du contrat de mandat</description>
    <label>Power of Attorney Edition Date</label>
    <type>Date</type>
</CustomField>