force-app/main/default/objects/CommercialPlanDetail__c/fields/ProdCapacityRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ProdCapacityRequestDate__c</fullName>
    <label>Prod Capacity Request Date</label>
    <type>DateTime</type>
</CustomField>