force-app/main/default/objects/CommercialPlanDetail__c/fields/ProdCapacityValidDate__c.field-meta.xml
<CustomField>
    <fullName>ProdCapacityValidDate__c</fullName>
    <label>Prod Capacity Validation Date</label>
    <type>DateTime</type>
</CustomField>