force-app/main/default/objects/CommercialPlanDetail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commercial Plan Details (Product)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsProduct</relationshipName>
    <type>Lookup</type>
</CustomField>