force-app/main/default/objects/CommercialPlanDetail__c/fields/ProductBrand__c.field-meta.xml
<CustomField>
    <fullName>ProductBrand__c</fullName>
    <formula>Product__r.Brand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Brand</label>
    <type>Text</type>
</CustomField>