force-app/main/default/objects/CommercialPlanDetail__c/fields/ProductEAN__c.field-meta.xml
<CustomField>
    <fullName>ProductEAN__c</fullName>
    <formula>Product__r.Product_EAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product EAN</label>
    <type>Text</type>
</CustomField>