force-app/main/default/objects/CommercialPlanDetail__c/fields/PWFAfterPromoDisc__c.field-meta.xml
<CustomField>
    <fullName>PWFAfterPromoDisc__c</fullName>
    <formula>PWFBeforePromoDisc__c * (1-SellInDiscountPerNego__c/ 100) - SellInDiscountUAmtNego__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Lowered Price after PromoDisc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>