force-app/main/default/objects/CommercialPlanDetail__c/fields/PWFBeforePromoDisc__c.field-meta.xml
<CustomField>
    <fullName>PWFBeforePromoDisc__c</fullName>
    <description>Prix descendu avant application de la remise promo</description>
    <label>Regular Lowered Price before PromoDisc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>