force-app/main/default/objects/CommercialPlanDetail__c/fields/QuantityPreOrder__c.field-meta.xml
<CustomField>
    <fullName>QuantityPreOrder__c</fullName>
    <label>Quantity PreOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>