force-app/main/default/objects/CommercialPlanDetail__c/fields/QuantityValidate__c.field-meta.xml
<CustomField>
    <fullName>QuantityValidate__c</fullName>
    <label>Quantity Validate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>