force-app/main/default/objects/CommercialPlanDetail__c/fields/QuantityValidatePartner__c.field-meta.xml
<CustomField>
    <fullName>QuantityValidatePartner__c</fullName>
    <label>Quantity Validate Partner</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>