force-app/main/default/objects/CommercialPlanDetail__c/fields/RetailPricePromowoTax__c.field-meta.xml
<CustomField>
    <fullName>RetailPricePromowoTax__c</fullName>
    <description>PV consommateur promo HT</description>
    <formula>IF(Product__c != null, RetailPricePromowTax__c / (1 +Product__r.VATRate__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PVC HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>