force-app/main/default/objects/CommercialPlanDetail__c/fields/RetailPricePromowTax__c.field-meta.xml
<CustomField>
    <fullName>RetailPricePromowTax__c</fullName>
    <description>PV consommateur promo TTC</description>
    <label>Pack funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>