force-app/main/default/objects/CommercialPlanDetail__c/fields/RetailPriceRegular__c.field-meta.xml
<CustomField>
    <fullName>RetailPriceRegular__c</fullName>
    <label>Regular Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>