force-app/main/default/objects/CommercialPlanDetail__c/fields/SalesExecutionRateFact__c.field-meta.xml
<CustomField>
    <fullName>SalesExecutionRateFact__c</fullName>
    <label>Actual redemption rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>