force-app/main/default/objects/CommercialPlanDetail__c/fields/SalesExecutionRateTarget__c.field-meta.xml
<CustomField>
    <fullName>SalesExecutionRateTarget__c</fullName>
    <description>Le pourcentage des ventes prévisionnelles où est appliquée la promo</description>
    <label>Forecast Redemption rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>