force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInBDate__c.field-meta.xml
<CustomField>
    <fullName>SellInBDate__c</fullName>
    <description>Date début de livraison pour la ligne</description>
    <label>SellIn Start Date Exception</label>
    <type>Date</type>
</CustomField>