force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInBDateCP__c.field-meta.xml
<CustomField>
    <fullName>SellInBDateCP__c</fullName>
    <description>Date début livraison prévue au niveau de l&apos;event</description>
    <formula>CommercialPlan__r.SellInBDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event SellIn Start Date</label>
    <type>Date</type>
</CustomField>