force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInBDateMonth__c.field-meta.xml
<CustomField>
    <fullName>SellInBDateMonth__c</fullName>
    <description>Mois date début commande</description>
    <formula>MONTH( IF(ISNULL(SellInBDate__c), SellInBDateCP__c, SellInBDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-in month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>