force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInBDateWeek__c.field-meta.xml
<CustomField>
    <fullName>SellInBDateWeek__c</fullName>
    <description>Semaine date début commande</description>
    <formula>IF(CEILING( ( SellInBDate__c - DATE( YEAR(SellInBDate__c ), 1, 1) + 1) / 7) &gt; 52,
52, CEILING( (SellInBDate__c - DATE( YEAR(SellInBDate__c ), 1, 1) + 1) / 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-in week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>