force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInBDateYear__c.field-meta.xml
<CustomField>
    <fullName>SellInBDateYear__c</fullName>
    <description>Année date début commande</description>
    <formula>YEAR( IF(ISNULL(SellInBDate__c), SellInBDateCP__c, SellInBDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approv Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>