force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDisc2NetPriceRegular__c.field-meta.xml
<CustomField>
    <fullName>SellInDisc2NetPriceRegular__c</fullName>
    <description>Total des remises appliquées pour le calcul du PA 3 net</description>
    <label>Discount Regular Regional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>