force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscBeforePromoDiscRegular__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscBeforePromoDiscRegular__c</fullName>
    <description>Total de la remise avant l&apos;application de la remise promo (toutes les remises de rang inférieur)</description>
    <label>Discount Regular Nat. before PromoDisc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>