force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscNetPriceRegular__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscNetPriceRegular__c</fullName>
    <label>Discount Regular National</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>