force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscountAvgRateFact__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscountAvgRateFact__c</fullName>
    <label>Discount Average Promo Rate Fact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>