force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscountAvgRateNego__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscountAvgRateNego__c</fullName>
    <label>Discount Average Promo Rate Nego</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>