force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscountMassValueFact__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscountMassValueFact__c</fullName>
    <label>Actual promo cost (on invoice)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>