force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscountMassValueNego__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscountMassValueNego__c</fullName>
    <formula>VolumeTarget__c * (PWFBeforePromoDisc__c * SellInDiscountPerNego__c / 100
+ SellInDiscountUAmtNego__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Promo MassValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>