force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscountPerNego__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscountPerNego__c</fullName>
    <label>Discount Promo Additional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>