force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInDiscountUAmtNego__c.field-meta.xml
<CustomField>
    <fullName>SellInDiscountUAmtNego__c</fullName>
    <label>Contribution Unit Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>