force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInEDate__c.field-meta.xml
<CustomField>
    <fullName>SellInEDate__c</fullName>
    <description>Date fin de livraison pour la ligne</description>
    <label>SellIn End Date Exception</label>
    <type>Date</type>
</CustomField>