force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInEDateCP__c.field-meta.xml
<CustomField>
    <fullName>SellInEDateCP__c</fullName>
    <description>Date fin vente conso prévue au niveau de l&apos;event</description>
    <formula>CommercialPlan__r.SellInEDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event SellIn End Date</label>
    <type>Date</type>
</CustomField>