force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInFact__c.field-meta.xml
<CustomField>
    <fullName>SellInFact__c</fullName>
    <description>CA réel (Qté * PAN)</description>
    <formula>NetPricePromo__c * QuantityFact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In Fact</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>