force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInLanded__c.field-meta.xml
<CustomField>
    <fullName>SellInLanded__c</fullName>
    <description>CA atterit (Qté * PAN)</description>
    <formula>NetPricePromo__c * QuantityLanded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In Landed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>