force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInPreOrder__c.field-meta.xml
<CustomField>
    <fullName>SellInPreOrder__c</fullName>
    <description>CA reservé (Qté * PAN)</description>
    <formula>NetPricePromo__c * QuantityPreOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In PreOrder</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>