force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInPreOrderBDateMonth__c.field-meta.xml
<CustomField>
    <fullName>SellInPreOrderBDateMonth__c</fullName>
    <formula>TEXT( MONTH( SellInPreOrderBDate__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-in order month</label>
    <type>Text</type>
</CustomField>